# TimeTagger

./: #  .envrc  .gitignore  CMakeLists.txt  README.md  config.toml  flake.nix  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Command.h  DatabaseManager.h  TimeManager.h  Timestamp.h
src/: Command.cpp  DatabaseManager.cpp  TimeManager.cpp  Timestamp.cpp  main.cpp
