cmake_minimum_required(VERSION 3.20)
project(TimingTool)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(timing-tool src/main.cpp src/TimeManager.cpp src/Command.cpp src/DatabaseManager.cpp)
target_include_directories(timing-tool PRIVATE include)
target_link_libraries(timing-tool sqlite3)
